5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1585_2895.log
== SUBMITION (2019-03-21 23:14:52) 
-- CODE:
x = int(input("valor do jogo: "))
q = n
frete = f
total = (x * n) + f
print(total)
-- EXECUTION TIME:
0.153021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    q = n
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:15:45) 
-- CODE:
x = int(input("valor do jogo: "))
q = n
frete = f
total = (x * n) + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    q = n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:16:14) 
-- CODE:
x = int(input("valor do jogo: "))
frete = f

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    frete = f
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:16:30) 
-- CODE:
x = int(input("valor do jogo: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    frete = f
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:19:05) 
-- CODE:
x = int(input("valor do jogo: "))
frete = f
quantidade = q
total = (x * q) + f
print(total)
-- EXECUTION TIME:
0.132604
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    frete = f
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:19:09) 
-- CODE:
x = int(input("valor do jogo: "))
frete = f
quantidade = q
total = (x * q) + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    frete = f
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:19:59) 
-- CODE:
x = int(input("valor do jogo: "))
frete = x + f
quantidade = q
total = (x * q) + f
print(total)
-- EXECUTION TIME:
0.153885
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    frete = x + f
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:20:00) 
-- CODE:
x = int(input("valor do jogo: "))
frete = x + f
quantidade = q
total = (x * q) + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    frete = x + f
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:28:46) 
-- CODE:
x = int(input("valor do jogo: "))
q = int(input("quantidade: "))
f = int(input("valor do frete: "))

total =(x * q) + f
-- EXECUTION TIME:
0.160983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:28:50) 
-- CODE:
x = int(input("valor do jogo: "))
q = int(input("quantidade: "))
f = int(input("valor do frete: "))

total =(x * q) + f
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:29:40) 
-- CODE:
x = int(input("valor do jogo: "))
q = int(input("quantidade: "))
f = int(input("valor do frete: "))

total =(x * q) + f
print(total)
-- EXECUTION TIME:
0.153507
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:29:59) 
-- CODE:
x = int(input("valor do jogo: "))
q = int(input("quantidade: "))
f = int(input("valor do frete: "))

total = (x * q) + f
print(total)
-- EXECUTION TIME:
0.20378
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:30:31) 
-- CODE:
x = int(input("valor do jogo: "))
q = int(input("quantidade: "))
f = int(input("valor do frete: "))

total = (x * q) + f
print(total)
-- EXECUTION TIME:
0.138539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:30:34) 
-- CODE:
x = int(input("valor do jogo: "))
q = int(input("quantidade: "))
f = int(input("valor do frete: "))

total = (x * q) + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:33:05) 
-- CODE:
q = int(input("valor do jogo: "))
x = int(input("quantidade: "))
f = int(input("valor do frete: "))

total = (x * q) + f
print(total)
-- EXECUTION TIME:
0.106063
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:33:44) 
-- CODE:
x = int(input("valor do jogo: "))
q = int(input("quantidade: "))
f = int(input("valor do frete: "))

total = (x * q) + f
print(total)
-- EXECUTION TIME:
0.179186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:33:46) 
-- CODE:
x = int(input("valor do jogo: "))
q = int(input("quantidade: "))
f = int(input("valor do frete: "))

total = (x * q) + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    q = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:35:24) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (x * q) + f
print(total)
-- EXECUTION TIME:
0.319351
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:35:39) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) + f
print(total)
-- EXECUTION TIME:
0.162284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:35:53) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:36:54) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = q * x + f
print(total)
-- EXECUTION TIME:
0.22182
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:37:14) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = q * x + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:41:04) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total1 = q * x
total2 = f
print(total1 + total2)
-- EXECUTION TIME:
0.214227
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:41:11) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total1 = q * x
total2 = f
print(total1 + total2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:41:55) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total1 = q * x + f
print(total1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:41:59) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total1 = q * x + f
print(total1)
-- EXECUTION TIME:
0.169578
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:42:01) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total1 = q * x + f
print(total1)
-- EXECUTION TIME:
0.206645
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:42:33) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total1 = q * x + f
print(total)
-- EXECUTION TIME:
0.153606
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:42:47) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total1 = q * x + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:43:17) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = q * x + f
print(total)
-- EXECUTION TIME:
0.142854
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:43:20) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = q * x + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:45:02) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:45:05) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) + f
print(total)
-- EXECUTION TIME:
0.127997
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:46:31) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:46:35) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) + f
print(total)
-- EXECUTION TIME:
0.146854
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:21:25) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) + f
print(total)
-- EXECUTION TIME:
0.128047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 00:21:28) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) + f
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:26:13) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) * f
print(total)
-- EXECUTION TIME:
0.142637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:26:23) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) - f
print(total)
-- EXECUTION TIME:
0.186003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:26:44) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) + q * f
print(total)
-- EXECUTION TIME:
0.219951
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:26:48) 
-- CODE:
q = int(input("quantidade: "))
x = int(input("valor do jogo: "))
f = int(input("valor do frete: "))

total = (q * x) + q * f
print(total)
-- EXECUTION TIME:
0.122697
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 00:27:50) 
-- CODE:
q = float(input("quantidade: "))
x = float(input("valor do jogo: "))
f = float(input("valor do frete: "))

total = (q * x) + f
print(total)
-- EXECUTION TIME:
0.193789
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
